--- a/brickbrick.html
+++ b/brickbrick.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Ammo - Breakable objects</title>
+  <title>Brick Brick</title>
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../html/resources/default.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">  
   <style>
       body {
           background-color: #bfd1e5;
+          margin: 0; /* Remove default body margin */
+          overflow: hidden; /* Prevent scrollbars */
       }
-      #info {
-          position: absolute;
-          top: 0px; left: 100px; width: 100%; 
+      #webgl-output {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          width: 100vw;
+          height: 100vh;
       }
   </style>    
 </head>
-
 <body>
   <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
   <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
   <script type="importmap"> 
     {"imports": {"three": "../build/three.module.js"}} 
   </script> 
-
-  <div id="info">Click to shoot a ball</div>  
  
   <div id="webgl-output">      
     <script src="../libs/other/ammo.wasm.js"></script>      
