--- a/brickbrick.html
+++ b/brickbrick.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Brick Brick</title>
   <link rel="shortcut icon" href="../favicon.ico">
   <link rel="stylesheet" href="../html/resources/default.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">  
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-      body {
-          background-color: #bfd1e5;
-          margin: 0; /* Remove default body margin */
-          overflow: hidden; /* Prevent scrollbars */
-      }
-      #webgl-output {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          width: 100vw;
-          height: 100vh;
-      }
-  </style>    
+    body {
+      background-color: #bfd1e5;
+      margin: 0;
+      overflow: hidden;
+    }
+
+    #webgl-output {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100vw;
+      height: 100vh;
+      margin-top: 0vh;
+      margin-left: -50vw;
+    }
+  </style>
 </head>
+
 <body>
-  <!-- Import maps polyfill -- Remove this when import maps will be widely supported-->
-  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>  
-  <script type="importmap"> 
+  <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+  <script type="importmap">
     {"imports": {"three": "../build/three.module.js"}} 
-  </script> 
- 
-  <div id="webgl-output">      
-    <script src="../libs/other/ammo.wasm.js"></script>      
-    <script type="module" src="brickbrick.js"></script>
+  </script>
+  <section id="loading-screen">
+    <div id="loader"></div>
+    <button class="button" id="start-button">INICIAR</button>
+  </section>
+  <div id="webgl-output">
+    <script src="../libs/other/ammo.wasm.js"></script>
+    <script id="game-script" type="module" src="brickbrick.js"></script>
   </div>
 </body>
+
 </html>
