--- a/appMobile.html
+++ b/appMobile.html
@@ -20,7 +20,7 @@
       LAUNCH </button>
     <button id="fullscreen" class="video-game-button"> [ ] </button>
     <script src="../libs/other/ammo.wasm.js"></script>
-    <script type="module" src="brickbrick.js"></script>
+    <script type="module" src="appMobile.js"></script>
   </div>
 </body>
 
